--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,19 @@
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
 
+.btn {
+  background-color: #E02119;
+  border-color: #000000;
+  margin-bottom: 10px;
+}
+
+.btn:hover {
+  background-color: #E0585A;
+}
+
+.btn-center {
+  margin: auto
+}
 
 body {
   background-color: #333333;
@@ -22,24 +35,29 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-a {
-  color: black;
+.navbar {
+  background-color: rgba(125,125,125,.8);
+  margin-bottom: 0;
+}
+
+.nav-item .nav-link, .navbar-brand {
+  color: white;
 }
 
 a:hover {
-  color: #48366E;
   text-decoration: none;
+  color: white;
 }
 
-div .welcome {
-  background-image: url('carpool_ad.jpeg');
-  background-repeat: repeat;
-  background-size: 100%;
-  // z-index: -1;
+.nav-item:hover {
+  background-color: black;
 }
 
 .welcome {
-  height: 750px;
+  background-image: url('http://images.hgmsites.net/med/carpool-ad-1940s-u-s-office-for-emergency-management-war-production-board_100428166_m.jpg');
+  background-size: contain;
+  min-height: 650px;
+  background-repeat: repeat;
 }
 
 .welcome-headers {
@@ -47,20 +65,53 @@ div .welcome {
   text-align: center;
   background-color: rgba(1,1,1,0.75);
 }
-//
-// #welcome-ga-logo {
-//   width: 50%;
-//   height: 50%
-// }
-.modal-field {
-  // border: none;
-  // outline: none;
-  // border-color: none;
-  // vertical-align: middle;
+
+.welcome-text {
+  margin-bottom: 20px;
+}
+
+.neighborhood-header {
+  background-image: url('http://2.bp.blogspot.com/-CsmP17on2BM/UFy2bOx49EI/AAAAAAAAAmU/BNMTkVvuruA/s1600/lacma.jpg');
+  color: white;
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  min-height: 400px;
+  max-height: 500px;
+  text-shadow: black 0.3em 0.3em 0.3em;
+  position: relative;
+}
+
+.neighborhood-name {
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+}
+
+.display-3{
+  vertical-align: bottom;
+}
+
+.field > label {
+  color: white;
+}
+
+.field > input {
+  color: black
+}
+
+.modal .field > * {
+  color: #000000;
+}
+
+
+.list-group a {
+  color: black;
 }
 
 .list-group > * {
-  background-color: rgba(125,125,125,.8)
+  background-color: rgba(125,125,125,.8);
 }
 
 .detailBox {
@@ -134,31 +185,4 @@ div .welcome {
 .actionBox {
     border-top:1px dotted #bbb;
     padding:10px;
-}
-
-.neighborhood-header {
-  background-image: url('http://2.bp.blogspot.com/-CsmP17on2BM/UFy2bOx49EI/AAAAAAAAAmU/BNMTkVvuruA/s1600/lacma.jpg');
-  color: white;
-  background-position: 0% 25%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: white;
-  min-height: 400px;
-  max-height: 500px;
-  text-shadow: black 0.3em 0.3em 0.3em;
-  position: relative;
-}
-
-.neighborhood-name {
-  display: inline-block;
-  position: absolute;
-  bottom: 0;
-}
-
-.display-3{
-  vertical-align: bottom;
-}
-
-.modal-content > * {
-  color: #000000;
 }
