--- a/app/views/carpools/show.html.erb
+++ b/app/views/carpools/show.html.erb
@@ -1,14 +1,6 @@
-<header>
-  <div class='jumbotron jumbrotron neighborhood-header' style="background-image: url('<%= @neighborhood.img_url %>')">
-    <div class="container neighborhood-name">
-      <h1 class='display-3'><%= @neighborhood.name %></h1>
-    </div>
-  </div>
-</header>
+<%= render 'partials/neighborhood_header' %>
 
 <div class='container'>
-
-  <%= link_to 'Back to my neighborhood', neighborhood_path(current_user.neighborhood) %>
 
   <h1><%= @carpool.name %></h1>
 
@@ -43,17 +35,25 @@
 
   <% end %>
 
-  <!-- show the carpool description -->
-  <p><%= @carpool.description %></p>
-
   <!-- show members of the carpool and their car info -->
-  <ul>
+  <ul class='list-group'>
+
+    <% if @carpool.description %>
+
+      <li class='list-group-item'><p><%= @carpool.description %></p></li>
+
+    <% end %>
+
     <!-- display a message if the carpool is empty -->
-    <%= 'This carpool has no members yet!' if @carpool.users.length == 0 %>
+    <% if @carpool.users.length == 0 %>
+
+      <li class='list-group-item'>This carpool has no members yet!</li>
+
+    <% end %>
 
     <% @carpool.users.each do |user| %>
 
-      <li><strong><%= user.f_name %> <%= user.l_name %></strong> car: <%= '&#10004;'.html_safe if user.has_car %> <%= '&#10008;'.html_safe if user.has_car == false %> <%= 'seats: ' if user.has_car %> <%= user.car_seats if user.has_car %></li>
+      <li class='list-group-item'><strong><%= user.f_name %> <%= user.l_name %></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;car: <%= '&#10004;'.html_safe if user.has_car %> <%= '&#10008;'.html_safe if user.has_car == false %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= 'seats: ' if user.has_car %> <%= user.car_seats if user.has_car %></li>
 
     <% end %>
 
@@ -68,10 +68,10 @@
       <!-- if they have a carpool, they can't join this one -->
       <% flash[:info] = 'You already belong to a Carpool! If you covet a spot in this one, you must first leave that one.' %>
 
-   <% else %>
+    <% else %>
       <!-- if they don't, they can join -->
       <%= form_for [@neighborhood, @carpool], :url => join_carpool_path, :html => { :method => :patch } do |f|%>
-        <%= f.submit 'Join this Carpool!' %>
+        <%= f.submit 'Join this Carpool!', class: 'btn btn-primary btn-lg' %>
 
       <% end %>
 
@@ -82,8 +82,9 @@
     <% flash[:success] = 'You already belong to this carpool! Lucky you!' %>
 
     <%= form_for [@neighborhood, @carpool], :url => leave_carpool_path, :html => { :method => :delete } do |f|%>
+
       <%= f.label 'Are your carpool-mates starting to bug you?' %> <br>
-      <%= f.submit 'Leave this Carpool', data: { confirm: 'Are you sure?'  }%>
+      <%= f.submit 'Leave this Carpool', class: 'btn btn-primary btn-lg', data: { confirm: 'Are you sure?'  }%>
 
     <% end %>
 
