--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,7 @@
 
   <div class="field">
     <%= f.label :neighborhood %><br />
-    <%= f.collection_select(:neighborhood_id, Neighborhood.all, :id, :name) %>
+    <%= f.collection_select(:neighborhood_id, Neighborhood.order('name'), :id, :name, :include_blank => true) %>
   </div>
 
   <div class="field">
@@ -57,12 +57,12 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class: 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name),  class: 'btn btn-primary btn-lg', data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
