--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,34 +4,38 @@
     <title>Project2CarpoolApp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
+
   <body>
 
-    <!-- <h5>This is where a nav bar will go on every page</h5> -->
+  <%= render 'partials/nav' %>
 
-    <p align="right">
-      <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.f_name %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-      <% else %>
-        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-      <% end %>
-    </p>
-
-    <%= yield %>
+    <% if @image %>
+      <%= yield %>
+    <% elsif root_path %>
+      <%= yield %>
+    <% else %>
+      <div class='container' >
+        <%= yield %>
+      </div>
+    <% end %>
 
     <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %> alert-dismissible">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <%= value %>
-    </div>
+
+      <div class="alert alert-<%= key %> alert-dismissible">
+
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+
+        <%= value %>
+
+      </div>
+
     <% end %>
 
   </body>
+
 </html>
