--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -1,8 +1,9 @@
-<h1>Carpools for <%= Neighborhood.first %> </h1>
+<h1>All Neighborhoods</h1>
 
-<% @carpools.where(neighborhood == Neighborhood.first) each do |carpool| %>
+<% @neighborhoods.each do |neighborhood| %>
+
   <ul>
-    <li><strong></strong> &nbsp; </li>
+    <li><strong><%= neighborhood.name %></strong></li>
   </ul>
 
 <% end %>
