--- a/app/views/carpools/show.html.erb
+++ b/app/views/carpools/show.html.erb
@@ -17,7 +17,7 @@
         <div class="modal-content">
 
           <div class="modal-header">
-            <h5 class='modal-title'>Edit this Carpool</h5>
+            <h5 class='modal-title' style='color: black'>Edit this Carpool</h5>
           </div>
 
           <div class="modal-body">
