--- a/app/views/partials/_form_new_carpool.html.erb
+++ b/app/views/partials/_form_new_carpool.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="actions modal-footer">
-    <button type="button" class='btn btn-secondary' data-dismiss='modal'>Cancel</button>
+    <button type="button" class='btn btn-secondary' data-dismiss='modal' style='margin-bottom: 0px'>Cancel</button>
     <%= f.submit 'Create Carpool!', class: 'btn btn-primary'%>
   </div>
 
