--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-faded">
 
-  <a class="navbar-brand nav-item" href="#">Diamond Lane</a>
+  <%= image_tag('diamond_lane_logo.png', :class => 'logo navbar-brand nav-item') %> <a class="navbar-brand nav-item" href="#">Diamond Lane</a>
 
   <ul class="nav navbar-nav">
 
