--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,15 @@
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
 
+.logo {
+  padding: 6px;
+}
+
+a.navbar-brand {
+  padding-left: 5px;
+  padding-right: 20px;
+}
+
 .btn {
   background-color: #E02119;
   border-color: #000000;
